--- a/public/style.css
+++ b/public/style.css
@@ -3,10 +3,17 @@
   padding: 0;
   gap: 2rem;
   grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
-  grid-auto-rows: 70vh;
 }
 .people > div {
   border: 1px solid black;
+  padding: 1rem;
+}
+.people > div textarea {
+  width: 100%;
+  min-height: 4rem;
+}
+.people > div label {
+  display: block;
 }
 .people pre {
   text-overflow: ellipsis;
