--- a/style.scss
+++ b/style.scss
@@ -3,10 +3,20 @@
     padding: 0;
     gap: 2rem;
     grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
-    grid-auto-rows: 70vh;
+    // grid-auto-rows: 50vh;
     
     > div {
         border: 1px solid black;
+        padding: 1rem;
+
+        textarea {
+            width: 100%;
+            min-height: 4rem;
+        }
+
+        label {
+            display: block;
+        }
     }
 
     pre {
